# rustccv2

./: .factory-version  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
rustccv2/: __init__.py
src/: ast.rs  codegen.rs  ir.rs  ir_builder.rs  lexer.rs  lib.rs  main.rs  parser.rs  preprocessor.rs  regalloc.rs  sema.rs
src/codegen/: mod.rs  x86_64.rs
src/ir/: builder.rs  mod.rs  types.rs
tests/: integration_tests.rs  test_codegen.rs  test_ir.rs
tests/arithmetic/: main.c
tests/break_continue/: main.c
tests/comparison/: main.c
tests/fibonacci/: main.c
tests/for_loop/: main.c
tests/hello_world/: main.c
tests/if_else/: expected.stdout  main.c
tests/logical_ops/: main.c
tests/negation/: main.c
tests/nested_if/: main.c
tests/nested_loops/: main.c
tests/preprocessor_define/: main.c
tests/preprocessor_ifdef/: expected.stdout  main.c
tests/preprocessor_include/: main.c  myheader.h
tests/printf_int/: main.c
tests/switch_statement/: expected.stdout  main.c
tests/unary_ops/: main.c
tests/variables/: main.c
tests/while_loop/: main.c
